frontend/tests/cases/positive/graded-base/nestedLambda.gr
-- gr --no-eval
language GradedBase
quad' : forall {a : Type}. a % 4 -> ((a, a), (a, a))
quad' = \x -> (\y -> (y, y)) (x, x)