frontend/tests/cases/negative/hsup/pushOneMany.gr
pushOneMany : forall {a b : Type} . (a, b) [One] -> (a [Many], b [One])
pushOneMany [(x, y)] = ([x], [y]) 